item desktop overflow fix

--- a/less/blocks/item.less
+++ b/less/blocks/item.less
@@ -11,11 +11,11 @@
 
   @media @desktop-widths {
     width: 315px;
-    margin-right: 38px;
+    margin-right: 52px;
     margin-bottom: 57px;
 
-    &--last {
-      margin-right: 2px;
+    &:nth-child(3n) {
+      margin-right: 0;
     }
   }
 
